[package]
edition = "2021"
name = "toml-edit-js"
private = true
authors = ["rainbowatcher <rainobw-w@qq.com>"]
description = "Edit TOML files in JavaScript"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
toml = "0.8.15"
toml_edit = "0.22.16"
wasm-bindgen = "0.2.92"
serde = "1.0.204"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.69"
num-bigint = "0.4.6"

[dev-dependencies]
indoc = "*"
wasm-bindgen-test = "0.3.42"

[profile.release]
lto = true
