[package]
name = "toml-edit-js"
version = "0.2.0"
edition = "2021"
private = true
authors = ["rainbowatcher <rainobw-w@qq.com>"]
description = "Edit TOML files in JavaScript"
repository = "https://github.com/rainbowatcher/toml-edit-js"
license = "MIT"
readme = "README.md"
categories = ["wasm"]
keywords = ["wasm", "toml", "edit", "javascript"]

[lib]
crate-type = ["cdylib"]

[dependencies]
toml = "^0.8.19"
toml_edit = "^0.22.16"
wasm-bindgen = "0.2.93"
serde = "1.0.209"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.70"
# num-bigint = "0.4.6"

[dev-dependencies]
indoc = "*"
wasm-bindgen-test = "0.3.43"

[profile.release]
lto = true
